# c_dsa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ctest.yaml
binary_tree/: CMakeLists.txt
binary_tree/include/: binary_tree.h
binary_tree/src/: binary_tree.c
binary_tree/tests/: create_print_destroy_tree.c  remove_first_node_tree.c  remove_last_node_tree.c  remove_middle_node_tree.c  remove_nonexistant_node_tree.c
linked_list/: CMakeLists.txt  README.md  linked_list.c  linked_list.h
linked_list/include/: linked_list.h
linked_list/src/: linked_list.c
linked_list/tests/: create_print_destroy.c  delete_node_check_size.c  remove_first_node.c  remove_last_node.c  remove_middle_node.c  remove_middle_node_check_size.c  remove_null_node.c
