cmake_minimum_required(VERSION 3.23)
project(c_dsa C)
set(CMAKE_C_STANDARD 23)

add_subdirectory(linked_list)
add_subdirectory(binary_tree)

option(TESTING "Run unit tests" 0)
if (${TESTING})
    include(CTest)
    file(GLOB_RECURSE test_files CONFIGURE_DEPENDS "**/tests/*.c")
    foreach (test_file_path ${test_files})
        file(STRINGS ${test_file_path} first_line LIMIT_COUNT 1)
        string(REGEX MATCH "(\\^.*)$" test_regex ${first_line})
        cmake_path(GET test_file_path FILENAME test_file)
        string(REGEX MATCH "^(.*)\\.c$" test_data "${test_file}")
        set(test_name ${CMAKE_MATCH_1})
        add_executable(${test_name} "${test_file_path}")
        target_link_libraries(${test_name} linked_list binary_tree)
        add_test(NAME ${test_name} COMMAND ${test_name})
        set_property(TEST ${test_name} PROPERTY PASS_REGULAR_EXPRESSION passRegex "${test_regex}")
    endforeach ()
endif ()
